fixed intro section spacing and font size, added globals.css

--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -23,8 +23,6 @@
     height: 100vh;
     width: 100vh;
     padding: 2rem;
-    font-size: 4rem;
-    font-weight: 700;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,6 +45,7 @@
 .introPara{
 font-size: 1.5rem;
 font-weight: 100;
+line-height: 2rem;
 }
 
 @media only screen and (max-width: 992px) {
