--- a/src/globals.css
+++ b/src/globals.css
@@ -1,1 +1,12 @@
 /* add global css classes here as spacing between text, small and large fonts since tailwindcss has been dropped */
+
+.small-header{
+    font-size: 2rem;
+    line-height: 3rem;
+}
+
+.large-header{
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 6rem;
+}
